Fix Feature Policy report output

This brings the feature policy report format in line with the spec,
and fixes the tests which were broken by WPT import.

Bug: 907232
Change-Id: If9d9469956221c18a1aa72ee39debb1340efc01f
Reviewed-on: https://chromium-review.googlesource.com/c/1338167
Commit-Queue: Ian Clelland <iclelland@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610427}